public interface IHealingService
{
    public bool ExecuteHealing(HealingItem potion);
}