@startuml ExpAndHealingServices
skinparam classAttributeIconSize 0
skinparam direction top to bottom
skinparam class {
  BackgroundColor #FFF9E6
  BorderColor #333333
  ArrowColor #333333
}

title Application Layer - Experience and Healing Services

interface IExpService {
  + GrantExperience(pokemon: Pokemon, amount: int): ProcessExpResult
  + CalculateExpGain(playerPoke: Pokemon, enemyPoke: Pokemon): int
}

class ExpService {
  - _gameSession: GameSession
  - _worldGenService: IWorldGenerationService
  + GrantExperience(pokemon: Pokemon, amount: int): ProcessExpResult
  + CalculateExpGain(playerPoke: Pokemon, enemyPoke: Pokemon): int
}

class ProcessExpResult <<record>> {
  + ExpGained: int
  + LeveledUp: bool
  + OldName: string?
  + EvolutionName: string?
  + NewMovesLearned: List<string>
  + HasEvolved: bool <<computed>>
}

interface IHealingService {
  + ExecuteHealing(potion: HealingItem): bool
}

class HealingService {
  - _gameSession: GameSession
  + ExecuteHealing(potion: HealingItem): bool
}

' Relationships
ExpService ..|> IExpService
ExpService --> GameSession
ExpService --> IWorldGenerationService
ExpService --> ProcessExpResult

HealingService ..|> IHealingService
HealingService --> GameSession

@enduml</content>
<parameter name="filePath">c:\C#\PokemonConsole\TurnBasedPokemon\Diagram\ClassDiagram\ExpAndHealingServices.puml